changed child width to % which fixes horizontal overflow but makes text overflow vertically due to height being set in child element

--- a/day1/style.css
+++ b/day1/style.css
@@ -13,11 +13,11 @@
   /* width: 900px; */
   width: 80%;
   margin: 0 auto;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .child {
   background-color: #38CFD9;
-  width: 750px;
+  width: 50%;
   height: 250px;
 }
